# RT-TM

./: .gitignore  CMakeLists.txt  CMakePresets.json  Declaration.md  LICENSE  Leaf_Data.json  Leaf_Data_New.json  Node_Data.json  README.md  TensorData-REAL.txt  TensorData.txt  launch.vs.json
.github/: Grog_The_Trog,md
.github/workflows/: Build-Benchmark.yml  Build-Clean-Branch.yml  Build-Clean.yml  Build-Dev.yml  Build-Sanitized.yml  Build.yml
Documentation/: Core.md  Core_Api.md
cmake/: CMakeLists.txt  main.cpp  nihilus_detect_architecture.cmake  rt_tm_detect_architecture.cmake
include/nihilus/: index.hpp
include/nihilus/common/: allocator.hpp  arch_traits.hpp  array.hpp  common.hpp  concepts.hpp  config.hpp  core_base.hpp  core_traits.hpp  data_types.hpp  debugging_io.hpp  h_params.hpp  harbinger.hpp  input_session.hpp  iterator.hpp  kernel_traits.hpp  kernel_type_profile_traits.hpp  memory_buffer.hpp  model.hpp  model_graph.hpp  model_graph_data.hpp  model_parser.hpp  model_traits.hpp  monolithic_dispatcher.hpp  param_api.hpp  string_literal.hpp  tokenizer.hpp  tuple.hpp  type_traits.hpp
include/nihilus/cpu/: collect_indices.hpp  cpu_arch.hpp  cpu_scheduler.hpp  thread_pool.hpp
include/nihilus/cpu/simd/: arm_neon.hpp  arm_sve2.hpp  avx_2.hpp  avx_512.hpp  nihilus_cpu_instructions.hpp
include/rt_tm/: index.hpp  op_graph.hpp
include/rt_tm/common/: allocator.hpp  arch_traits.hpp  array.hpp  block.hpp  common.hpp  concepts.hpp  config.hpp  core.hpp  core_base.hpp  core_traits.hpp  data_types.hpp  debugging_io.hpp  h_params.hpp  harbinger.hpp  hash.hpp  input_session.hpp  iterator.hpp  kernel_traits.hpp  kernel_type_profile_traits.hpp  layer.hpp  memory_buffer.hpp  model.hpp  model_arch_traits.hpp  model_graph.hpp  model_parser.hpp  model_traits.hpp  monolithic_dispatcher.hpp  param_api.hpp  produce_op.hpp  string_literal.hpp  string_view.hpp  tokenizer.hpp  tuple.hpp  type_traits.hpp
include/rt_tm/cpu/: collect_indices.hpp  cpu_arch.hpp  cpu_op_core.hpp  cpu_scheduler.hpp  detect_isa.hpp  device.hpp  thread_pool.hpp
include/rt_tm/cpu/arm_neon/: arm_neon.hpp
include/rt_tm/cpu/arm_sve/: arm_sve.hpp
include/rt_tm/cpu/avx_2/: avx_2.hpp
include/rt_tm/cpu/avx_512/: avx_512.hpp
include/rt_tm/cpu/simd/: arm_neon.hpp  arm_sve2.hpp  avx_2.hpp  avx_512.hpp  rt_tm_cpu_instructions.hpp
source/cpu/: CMakeLists.txt
source/cpu/arm_neon/: CMakeLists.txt  arm_neon.cpp
source/cpu/arm_sve/: CMakeLists.txt  arm_sve.cpp
source/cpu/avx_2/: CMakeLists.txt  avx_2.cpp
source/cpu/avx_512/: CMakeLists.txt  avx_512.cpp
tests/vs-llama/: CMakeLists.txt  main.cpp  save_tensor.h
tests/vs-llama-benchmark/: CMakeLists.txt
tests/vs-llama-benchmark/common/: build-info.cpp
tests/vs-llama-clean/: CMakeLists.txt  main.cpp
tests/vs-llama-clean/common/: arg.cpp  build-info.cpp  log.cpp
tests/vs-llama-clean/common/minja/: minja.hpp
tests/vs-llama-dev/: CMakeLists.txt  main.cpp
tests/vs-llama-dev/common/: build-info.cpp
tests/vs-llama/common/: build-info (2).cpp  build-info.cpp
